@@ -17,6 +17,10 @@ Major new features:
   arguments to support expressions with a comma inside a compound
   literal initializer not surrounded by parentheses.
 
+* The C23 typedef names long_double_t, _Float32_t, _Float64_t, and (on
+  platforms supporting _Float128) _Float128_t, introduced in TS
+  18661-3:2015, have been added to <math.h>.
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * Support for dumped heaps has been removed - malloc_set_state() now always
